@@ -381,42 +381,54 @@ for EXTENDEDDIV."
          (uri (substring (concat (format "%s/?" user)
                                  (if (not (or (null tagname) (equal tagname "")))
                                      (format "%s?" tagname))
-                                 (if (not (or (null count) (equal count "")))
+				 (if (not (or (null count) (equal count "")))
                                      (format "count=%s&" count)
-                                   (format "count=%s&" delicious-api-html-count))
+                                   (unless (null delicious-api-html-count)
+				     (format "count=%s&" delicious-api-html-count)))
                                  (if (not (null extended))
                                      (format "extended=%s&" extended)
-                                   (format "extended=%s&" delicious-api-html-extended))
+				   (unless (null delicious-api-html-extended)
+				     (format "extended=%s&" delicious-api-html-extended)))
                                  (if (not (null divclass))
                                      (format "divclass=%s&" divclass)
-                                   (format "divclass=%s&" delicious-api-html-divclass))
+				   (unless (null delicious-api-html-divclass)
+				     (format "divclass=%s&" delicious-api-html-divclass)))
                                  (if (not (null aclass))
                                      (format "aclass=%s&" aclass)
-                                   (format "aclass=%s&" delicious-api-html-aclass))
+				   (unless (null delicious-api-html-aclass)
+				     (format "aclass=%s&" delicious-api-html-aclass)))
                                  (if (not (null tags))
                                      (format "tags=%s&" tags)
-                                   (format "tags=%s&" delicious-api-html-tags))
+				   (unless (null delicious-api-html-tags)
+				     (format "tags=%s&" delicious-api-html-tags)))
                                  (if (not (null tagclass))
                                      (format "tagclass=%s&" tagclass)
-                                   (format "tagclass=%s&" delicious-api-html-tagclass))
+				   (unless (null delicious-api-html-tagclass)
+				     (format "tagclass=%s&" delicious-api-html-tagclass)))
                                  (if (not (null tagsep))
                                      (format "tagsep=%s&" tagsep)
-                                   (format "tagsep=%s&" delicious-api-html-tagsep))
+				   (unless (null delicious-api-html-tagsep)
+				     (format "tagsep=%s&" delicious-api-html-tagsep)))
                                  (if (not (null tagsepclass))
                                      (format "tagsepclass=%s&" tagsepclass)
-                                   (format "tagsepclass=%s&" delicious-api-html-tagsepclass))
+				   (unless (null delicious-api-html-tagsepclass)
+				     (format "tagsepclass=%s&" delicious-api-html-tagsepclass)))
                                  (if (not (null bullet))
                                      (format "bullet=%s&" bullet)
-                                   (format "bullet=%s&" delicious-api-html-bullet))
+				   (unless (null delicious-api-html-bullet)
+				     (format "bullet=%s&" delicious-api-html-bullet)))
                                  (if (not (null rssbutton))
                                      (format "rssbutton=%s&" rssbutton)
-                                   (format "rssbutton=%s&" delicious-api-html-rssbutton))
+				   (unless (null delicious-api-html-rssbutton)
+				     (format "rssbutton=%s&" delicious-api-html-rssbutton)))
                                  (if (not (null extendeddiv))
                                      (format "extendeddiv=%s&" extendeddiv)
-                                   (format "extendeddiv=%s&" delicious-api-html-extendeddiv))
+                                   (unless (null delicious-api-html-extendeddiv)
+				     (format "extendeddiv=%s&" delicious-api-html-extendeddiv)))
                                  (if (not (null extendedclass))
                                      (format "extendedclass=%s&" extendedclass)
-                                   (format "extendedclass=%s&" delicious-api-html-extendedclass)))
+                                   (unless (null delicious-api-html-extendedclass)
+				     (format "extendedclass=%s&" delicious-api-html-extendedclass))))
                          0 -1)))
     uri))
   
